--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-restricted-globals": "off",
+      "react-hooks/rules-of-hooks": "off"
+    }
   },
   "browserslist": {
     "production": [
